-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.906 2011-03-28 17:39:42 guru Exp $
-----------------------------------------------------------------------------------------

2011-03-28	pwessel
	* *.[ch]:		Replace STAT with GMT_STAT to avoid nameclashes on some systems.

2011-03-28	remko
	* ps2raster_func.c:	Automatically add GS option -dMaxBitmap=100000000 with -TG

2011-03-27	remko
	* doc/html/index.html:	Now created (linked) out of gmt_services.html
	* doc/GNUmakefile:	Removed everything dealing with HMTL documentation

2011-03-27	jluis
	* gmt_esri_io.c:	Extend the ESRI format to also read ESRI .HDR format. 
				That is a raw binary + a .hdr ascii header file.
				It knows also how to deal with plain GTOPO30 and SRTM30
				raw binary files (that, is without companion .hdr file)
				as well as SRTM1 and SRTM3 (with a .hgt extension)
	* gmt_io.c:		Add extra test ' && c != EOF' to GMT_fgets to avoid potential 
				infinite while loop when called on a binary file.

2011-03-26	pwessel
	* pslib.c:		Added 2nd argument to PSL_endclipping to indicate how
				many levels to restore and what kind of clipping (txt/poly).
	* PSL_label.ps:		Two new counters (PSL_nclip_pol and PSL_nclip_txt) added.
	* psclip_func.c:	Extended -C option to handle the various kinds of clipping
				restore that may be required.
	* grdcontour_func.c:	For -D must turn on -mo explicitly (like pscontour/pscoast)

2011-03-25	pwessel
	* grdraster_func.c:	Make sure grid header is fully initialized.  Also needed
				to do padded ij calculations, and free the grid.

2011-03-25	remko
	* GMT_Chapter_4.tex:	Make clear that files with full path names will not be searched
				for in other places.
	* grdraster.txt:	Wrong order mentioned of GMT_USERDIR and GMT_DATADIR
	* grdraster_func.c:	Also look in GMT_SHAREDIR/dbase for data files.
	* gmt_io.c (GMT_get{user,data}path):	Do not look any further when full path is given.